--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   font-family: 'Zig';
   src:url('./assets/fonts/zig.ttf') format('ttf');
-
+  letter-spacing: 1px;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
