--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,13 @@
 }
 
 @font-face {
+  font-family: 'GaretBold';
+  src: url('/src/assets/fonts/Garet-Heavy.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Zig';
   src:url('./assets/fonts/zig.ttf') format('ttf');
   font-weight: normal;
