refac: deleting duplicated code, using customInput and customButton

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,18 @@
   font-style: normal;
   letter-spacing: 1px;
 }
+
+
+select {
+  color: #ffffff;
+  font-size: 0.875rem;
+}
+
+option {
+  color: #b6b4b4;
+}
+
+#files, #dateTimeMetF, #imageDate0, #imageDate1, #imageDate2 {
+  font-size: 0.875rem;
+  padding-top: 0.40rem;
+}
